--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple window manager for P5",
   "main": "index.html",
   "scripts": {
+    "build": "tsc && echo done!",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/c3ypt1c/p5-windows#readme",
   "dependencies": {
-    "p5": "^1.4.0"
+    "p5": "^1.4.0",
+    "typescript": "^4.3.5"
   }
 }
